--- a/gb/24/10/31/n14361298.md
+++ b/gb/24/10/31/n14361298.md
@@ -38,50 +38,39 @@
 <p>茶改场进一步说明，台风过后若有灾情发生，请农民主动向当地乡镇公所通报，并请地方政府依农业天然灾害查报作业规定办理。农民也可利用智慧型手机下载“农产业天然灾害现地照相APP”，注册会员后可拍摄农田作物的灾损现况及上传照片，系统将自动记录拍摄时间及农田定位资讯，俾能提供公所作为勘查的佐证资料，可兼顾受灾农民及时复耕及申请天然灾害救助之权益。◇</p>
 <p>责任编辑：昌英</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/23/n14164686.md#1">阿里山林铁招募志工新血 共同守护文化资产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/6/n14241907.md#1">担任观光大使 台阿里山林铁火车头英国首航</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294063.md#1">阿里山林铁全线通车 总统亲临视察表扬鼓励</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305847.md#1">首见阿里山林铁沿线 航空影像专著新书发表</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308295.md#1">2421m的回声─阿里山林铁全线纪行 新书发表</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14311733.md#1">《复返阿里山》 林铁首部遥测考古经典巨作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360972.md#1">113年度嘉义县童军大露营  在布中活力展开</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360890.md#1">台日学生共融课堂 南三陆高中访嘉中交流</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360814.md#1">台日交流 日本民族学博物馆长参访六堆园区</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360848.md#1">中台地方型SBIR成果展 九县市来嘉大展成果</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/22/n11604644.md#1">运用智慧农业工具 茶改场推广茶园防减灾技术</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/29/n14063160.md#1">中台苏拉已发布海上警报 全台农友加强防范</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297385.md#1">凯米台风 吁全台农友加强防范及注意人身安全</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341057.md#1">山陀儿台风将来袭 全台农友加强防范及人身安全</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361340.md#1">桃园市推出724试办路线 串联八德桃园龟山</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361343.md#1">强台康芮 73岁老翁骑车遭强风吹倒平镇警救援</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361267.md#1">康芮台风带来豪雨 石门水库8时溢洪道泄洪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361291.md#1">康芮强台 桃机取消241航班取消大陆及港澳</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360751.md#1">医疗外交与技术交流 桃园医院携手柬埔寨医疗机构</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360552.md#1">桃园国际青年创意美学竞赛 开南大学1金1银</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542526.md#1">长庚科大蝉联《远见》医学大学第五名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542512.md#1">桃园首创推健康自主 结合预立医疗补助带状疱疹疫苗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542507.md#1">桃园亲子暑假旅游 力推游桃园莲花季赏莲兼食农教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542490.md#1">桃园市2025 Super Smart Successful Summer 超夏特攻队夏令营</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542498.md#1">中原大学首办AI创新竸赛  “让我下班”夺魁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542472.md#1">2025起鼓飞扬创意花鼓邀请赛 中坜天德宫登场</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/8/n11372651.md#1" target="_blank">新州：豢养特务作恶 中共卑鄙无耻</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/4/15/n4132079.md#1" target="_blank">从唐山义女“探父蒙难”看古今对比</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/27/n10343446.md#1" target="_blank">刘白：晚清张謇的幻想</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/6/n11238020.md#1" target="_blank">四百万难治好的脑瘤并发症 修大法痊愈</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781764.md#1">太后临终前 竟让皇帝不要把皇位传给儿子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/9/n12607219.md#1">【元曲大家】散曲第一人马致远</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359080.md#1">美国9岁女孩突然描述前世生活 父母惊呆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355475.md#1">明日黄花蝶也愁！看苏轼怎样走出低谷 转化人生境界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/11/25/n12575680.md#1">如玉树临风 张养浩散曲赏析</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/23/n14356478.md#1">【中国禁闻】陷政治危局 中共四中全会再延期</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/23/n14356475.md#1">【晚间新闻】中共贪官遍地 七万多村官被查</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360041.md#1">【思想领袖】马克思主义如何利用危机为祸美国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360161.md#1">台风康芮来袭 30日绿岛兰屿率先停班停课</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14359849.md#1">台风康芮增强 气象专家：登陆台湾概率高</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359589.md#1">否认为歌曲版权起诉刀郎 云朵代言品牌遭下架</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360436.md#1">投资2亿 刘德华《焚城》点映首日票房仅34万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359656.md#1">遭向佐突搧巴掌 李小龙模仿者方小龙称已报警</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360347.md#1">45岁邓超头发胡子全白 侧脸神似周星驰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359105.md#1">《正年》收视创佳绩 金泰梨登话题演员榜冠军</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359233.md#1">专家：面包放在这种东西旁边 会更快发霉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/27/n14358642.md#1">打蛋如何不让蛋壳掉进碗里？2个关键技巧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/25/n14357571.md#1">夜尿超困扰！2动作可改善</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/21/n14355259.md#1">补钙不只靠牛奶 三种饮食组合促进钙吸收</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/16/n14351750.md#1">你应该了解 不用电有哪些煮饭方式与技巧</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14546042.md#1">【唐青看时事】王毅说漏嘴：无法接受俄战败</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542663.md#1">苦味可能对改善消化和血糖至关重要</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/10/31/n14361298.htm">强度台风“康芮”来袭 全台农友加强防范措施</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361298.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
